[package]
name = "urne"
version = "0.0.0"
edition = "2021"

[features]

[dependencies.rand]
version = "0.8"
default-features = false
features = [ "alloc" ]

[dependencies.either]
version = "1.6"
default-features = false


[dev-dependencies]

[dev-dependencies.rand]
version = "0.8"
default-features = true
